--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>simple-note-glow</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Notebook – Simple Note Taking App</title>
+    <meta name="description" content="Notebook is your minimal, distraction-free note-taking space." />
+    <meta name="author" content="bons6710hos@gmail.com" />
 
-    <meta property="og:title" content="simple-note-glow" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Notebook – Simple Note Taking App" />
+    <meta property="og:description" content="Capture thoughts quickly and beautifully with Notebook." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://notebook-bucket.s3.amazonaws.com/cover.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@notebook_app" />
+    <meta name="twitter:title" content="Notebook – Simple Note Taking App" />
+    <meta name="twitter:description" content="Capture thoughts quickly and beautifully with Notebook." />
+    <meta name="twitter:image" content="https://notebook-bucket.s3.amazonaws.com/cover.png" />
+
+    <!-- Favicon (optional) -->
+    <link rel="icon" type="image/png" href="/book.png" />
   </head>
 
   <body>
